--- a/app/views/layouts/_redmine_uxta_base_bottom.erb
+++ b/app/views/layouts/_redmine_uxta_base_bottom.erb
@@ -5,4 +5,4 @@
 <%= javascript_include_tag 'redmine_uxta', :plugin => 'redmine_uxta' %>
 
 <%= stylesheet_link_tag 'select2/select2.min', :plugin => 'redmine_uxta' %>
-
+<%= stylesheet_link_tag 'select2_mobile_patch', :plugin => 'redmine_uxta' %>
